--- a/index.html
+++ b/index.html
@@ -879,7 +879,8 @@
             <div class="services-container">
                 <div class="header-content">
                     <div class="header-text">
-                        <h1 class="main-title" style="color: #f0f0f0; margin-left: 30px; margin-top: 100px;">Our Fleet</h1>
+                        <h1 class="main-title" style="color: #f0f0f0; margin-left: 30px; margin-top: 100px;">Our Fleet
+                        </h1>
                     </div>
                     <div class="navigation-arrows">
                         <button class="arrow-button" id="prevSlide"><i class="fa-solid fa-chevron-left"></i></button>
@@ -1012,6 +1013,106 @@
     <!----------- End Fleet and why Choose Sections ---------------->
 
 
+    <section class="how-work-section">
+        <div class="how-section-header">
+            <h2>How It Works</h2>
+        </div>
+
+        <div class="wave-path-container">
+            <div style="width: 100%; height: auto; background-color: transparent;">
+                <div class="our-working--image max-lg:hidden"><svg width="100%" height="100%" viewBox="0 0 1440 306"
+                        fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <!-- Existing paths (wave lines) remain unchanged -->
+                        <path
+                            d="M-23.9766 108.502C24.9197 125.64 121.163 155.934 177.979 138.193C234.795 120.452 362.373 21.6002 465.675 100.898C485.303 116.83 517.326 145.074 587.055 206.629C658.85 263.839 740.763 254.787 793.659 198.663C831.881 158.109 888.49 96.1195 939.315 108.865C954.122 111.4 996.338 124 1046.75 154.126C1109.76 191.783 1174.84 201.56 1215.13 175.489C1255.42 149.419 1273.5 123.711 1462.02 115.383"
+                            stroke="white" stroke-width="1.5" />
+                        <path
+                            d="M-28.2956 133.681C21.9993 148.673 121.904 181.738 177.057 161.614C232.21 141.49 350.9 37.4612 460.92 112.095C481.899 127.139 502.609 150.319 577.494 210.36C652.378 270.401 740.69 275.103 803.696 196.977C821.6 176.119 864.017 131.51 890.459 119.936C923.512 105.468 947.268 113.064 987.551 127.17C1026.42 140.781 1150.88 233.869 1237.05 159.47C1243.46 153.938 1249.77 148.209 1257.46 144.545C1286.32 130.786 1352.9 110.418 1460.1 106.192"
+                            stroke="#FFD600" stroke-width="1.5" />
+                        <path
+                            d="M-23.9766 168.195C9.9299 176.507 86.2109 193.276 120.083 193.854C162.423 194.577 189.789 185.903 236.26 156.992C282.731 128.08 359.149 80.3756 440.215 120.852C521.281 161.328 618.869 279.867 712.844 260.713C722.826 259.628 747.852 253.701 768.092 238.667C788.517 223.496 837.881 150.858 884.401 121.903C903.753 109.858 929.073 108.023 951.278 113.172C974.225 118.493 1009.7 130.826 1060.86 158.437C1085.3 169.4 1142.03 190.168 1173.42 185.542C1212.66 179.76 1250.72 144.199 1261.2 138.922C1281.52 128.684 1381.51 94.8317 1461.02 91.2178"
+                            stroke="#F68220" stroke-width="1.5" />
+                        <path
+                            d="M-22.9766 200.657C27.6448 213.544 139.218 234.26 180.542 214.026C232.197 188.733 327.757 96.9572 427.45 135.98C527.144 175.003 547.289 229.563 634.068 266.417C720.848 303.272 779.734 266.417 821.574 200.295C838.448 165.488 888.105 101.004 951.743 121.527C1031.29 147.181 1133.05 205.354 1197.1 175.003C1203.65 172.715 1221.17 163.369 1238.94 144.291C1261.15 120.444 1348.45 91.1764 1460.02 79.6141"
+                            stroke="#5D5D5D" stroke-width="1.5" />
+
+                        <!-- Four evenly spaced points -->
+                        <g filter="url(#filter4_d_2452_973)" data-id="1" class="custom-pointer cursor-pointer">
+                            <circle cx="157.5" cy="139.5" r="7.5" fill="#F68220" />
+                            <circle cx="157.5" cy="139.5" r="9.5" stroke="white" stroke-width="4" />
+                        </g>
+                        <g filter="url(#filter2_d_2452_973)" data-id="2" class="custom-pointer cursor-pointer">
+                            <circle cx="505" cy="176" r="8" fill="#FFD600" />
+                            <circle cx="505" cy="176" r="10" stroke="white" stroke-width="4" />
+                        </g>
+                        <g filter="url(#filter1_d_2452_973)" data-id="3" class="custom-pointer cursor-pointer">
+                            <circle cx="840" cy="158" r="6" fill="#F68220" />
+                            <circle cx="840" cy="158" r="8" stroke="white" stroke-width="4" />
+                        </g>
+                        <g filter="url(#filter3_d_2452_973)" data-id="4" class="custom-pointer cursor-pointer">
+                            <circle cx="1152" cy="185" r="8" fill="#FFD600" />
+                            <circle cx="1152" cy="185" r="10" stroke="white" stroke-width="4" />
+                        </g>
+                    </svg>
+                </div>
+
+                <!-- Process Points -->
+                <div class="process-point point-discovery">
+                    <div class="point-label">1. Request Quote </div>
+                    <div class="point-content">
+                        <h4>Brand Alignment</h4>
+                        <p>Deep dive into your brand’s essence <br> and goals to tailor a strategy that <br>resonates
+                            with your
+                            market.</p>
+                        <h4>Visionary Planning</h4>
+                        <p>Craft a roadmap featuring innovative <br> features and integrations for a <br>standout online
+                            presence.</p>
+                    </div>
+                </div>
+
+                <div class="process-point point-graphic-design">
+                    <div class="point-label">3. Transport & Track </div>
+                    <div class="point-content">
+                        <h4>Brand Alignment</h4>
+                        <p>Deep dive into your brand’s essence <br> and goals to tailor a strategy that <br>resonates
+                            with your
+                            market.</p>
+                        <h4>Visionary Planning</h4>
+                        <p>Craft a roadmap featuring innovative <br> features and integrations for a <br>standout online
+                            presence.</p>
+                    </div>
+                </div>
+
+                <div class="process-point point-communication">
+                    <div class="point-label">2. Load & Secure</div>
+                    <div class="point-content">
+                        <h4>Brand Alignment</h4>
+                        <p>Deep dive into your brand’s essence <br> and goals to tailor a strategy that <br>resonates
+                            with your
+                            market.</p>
+                        <h4>Visionary Planning</h4>
+                        <p>Craft a roadmap featuring innovative <br> features and integrations for a <br>standout online
+                            presence.</p>
+                    </div>
+                </div>
+
+                <div class="process-point point-development">
+                    <div class="point-label">4. Deliver & Confirm</div>
+                    <div class="point-content">
+                        <h4>Brand Alignment</h4>
+                        <p>Deep dive into your brand’s essence <br> and goals to tailor a strategy that <br>resonates
+                            with your
+                            market.</p>
+                        <h4>Visionary Planning</h4>
+                        <p>Craft a roadmap featuring innovative <br> features and integrations for a <br>standout online
+                            presence.</p>
+                    </div>
+                </div>
+
+            </div>
+    </section>
+
+
     <!----------- Start Services Sections ---------------->
 
     <section class="service2-section">
@@ -1029,8 +1130,7 @@
                     <!-- Service Card 1 -->
                     <div class="service2-card">
                         <div class="service2-image-wrapper">
-                            <img src="/images/service-card-1.png"
-                                alt="Workers in industrial setting">
+                            <img src="/images/service-card-1.png" alt="Workers in industrial setting">
                         </div>
                         <div class="service2-number-circle">01</div>
                         <div class="service2-content">
@@ -1045,8 +1145,7 @@
                     <!-- Service Card 2 -->
                     <div class="service2-card">
                         <div class="service2-image-wrapper">
-                            <img src="/images/service-card-2.png"
-                                alt="Workers discussing plans">
+                            <img src="/images/service-card-2.png" alt="Workers discussing plans">
                         </div>
                         <div class="service2-number-circle">02</div>
                         <div class="service2-content">
@@ -1061,8 +1160,7 @@
                     <!-- Service Card 3 -->
                     <div class="service2-card">
                         <div class="service2-image-wrapper">
-                            <img src="/images/service-card-3.png"
-                                alt="Workers reviewing blueprints">
+                            <img src="/images/service-card-3.png" alt="Workers reviewing blueprints">
                         </div>
                         <div class="service2-number-circle">03</div>
                         <div class="service2-content">
@@ -1077,8 +1175,7 @@
                     <!-- Service Card 4 -->
                     <div class="service2-card">
                         <div class="service2-image-wrapper">
-                            <img src="/images/service-card-4.png"
-                                alt="Workers on a power line">
+                            <img src="/images/service-card-4.png" alt="Workers on a power line">
                         </div>
                         <div class="service2-number-circle">04</div>
                         <div class="service2-content">
@@ -1095,6 +1192,8 @@
     </section>
 
     <!----------- End Services Sections ---------------->
+
+
 
 
 
@@ -1130,14 +1229,16 @@
                                                             <!-- /.sec-title__tagline -->
                                                         </div>
                                                         <!-- /.sec-title__top -->
-                                                        <h3 class="sec-title__title wow fadeInUp">Your journey starts with ease and ends with satisfaction.</h3>
+                                                        <h3 class="sec-title__title wow fadeInUp">Your journey starts
+                                                            with ease and ends with satisfaction.</h3>
                                                         <!-- /.sec-title__title -->
                                                     </div>
                                                     <!-- /.sec-title -->
                                                     <div class="cta-one__content__btn wow fadeInUp"
                                                         data-wow-duration="1500ms" data-wow-delay="150ms">
                                                         <a href="#" class="cityride-btn cityride-btn--border">
-                                                            <span class="cityride-btn__icon"><i class="fa-solid fa-phone-volume"></i></span>
+                                                            <span class="cityride-btn__icon"><i
+                                                                    class="fa-solid fa-phone-volume"></i></span>
                                                             <span style="margin-left: 5px;">Contact now</span>
                                                         </a>
                                                     </div>
