--- a/index.html
+++ b/index.html
@@ -1443,7 +1443,7 @@
                                                 <span class="footer-widget__info__icon">
                                                     <i aria-hidden="true" class=" icon-telephone-call"></i> </span>
                                                 <!-- /.footer-widget__info__icon -->
-                                                <a href="">+91 5698 0036 420</a>
+                                                <a href="tel:+917417827633">+91 7417 827 633</a>
                                             </li>
                                         </ul>
                                         <!-- /.list-unstyled -->
