--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 <!-- End logo -->
             </div>
             <!-- /.tt-header-col -->
-            <div class="tt-header-col" style="position: sticky;">
+            <div class="tt-header-col" style="position: absolute; right: 50px; top: 20px;">
                 <!-- Begin overlay menu toggle button -->
                 <div id="tt-ol-menu-toggle-btn-wrap">
                     <div class="tt-ol-menu-toggle-btn-holder">
@@ -1443,7 +1443,7 @@
                                                 <span class="footer-widget__info__icon">
                                                     <i aria-hidden="true" class=" icon-telephone-call"></i> </span>
                                                 <!-- /.footer-widget__info__icon -->
-                                                <a href="tel:+917417827633">+91 7417 827 633</a>
+                                                <a href="">+91 7417 827 633</a>
                                             </li>
                                         </ul>
                                         <!-- /.list-unstyled -->
