--- a/index.html
+++ b/index.html
@@ -1425,7 +1425,7 @@
                             </div>
                         </div>
                         <div class="elementor-element elementor-element-60bcc0b e-con-full e-flex e-con e-child"
-                            data-id="60bcc0b" data-element_type="container">
+                            data-id="60bcc0b" data-element_type="container" style="margin-left: 20px;">
                             <div class="elementor-element elementor-element-51deedd elementor-widget elementor-widget-footer-contact"
                                 data-id="51deedd" data-element_type="widget" data-widget_type="footer-contact.default">
                                 <div class="elementor-widget-container">
@@ -1435,32 +1435,19 @@
                                         <ul class="list-unstyled footer-widget__info ml-0">
                                             <li>
                                                 <span class="footer-widget__info__icon">
-                                                    <i aria-hidden="true" class="icon-email"></i> </span>
+                                                   <i class="fa-solid fa-envelope"></i> </span>
                                                 <!-- /.footer-widget__info__icon -->
                                                 <a href="">needhelp@company.com</a>
                                             </li>
                                             <li>
                                                 <span class="footer-widget__info__icon">
-                                                    <i aria-hidden="true" class=" icon-telephone-call"></i> </span>
+                                                    <i class="fa-solid fa-phone-volume"></i> </span>
                                                 <!-- /.footer-widget__info__icon -->
                                                 <a href="">+91 7417 827 633</a>
                                             </li>
                                         </ul>
                                         <!-- /.list-unstyled -->
-                                        <form action="#" data-url="#" class="footer-widget__newsletter mc-form">
-                                            <div class="form-group__form">
-                                                <input type="email" name="EMAIL" placeholder="Your email address">
-                                                <button type="submit" class="cityride-btn cityride-btn--secondary"><span
-                                                        class="icon-arrow-left1">Submit</span></button>
-                                            </div>
-                                            <!-- /.form-group -->
-                                            <div class="form-group__check">
-                                                <input type="checkbox" name="checkbox" id="check">
-                                                <label for="check">I agree to the <a href="#">Privacy
-                                                        Policy.</a></label>
-                                            </div>
-                                            <!-- /.form-group -->
-                                        </form>
+                                        
                                         <!-- /.footer-widget__newsletter mc-form -->
                                         <div class="mc-form__response"></div>
                                         <!-- /.mc-form__response -->
