--- a/index.html
+++ b/index.html
@@ -169,12 +169,7 @@
 
                                     <li class="tt-ol-submenu-wrap">
                                         <div class="tt-ol-submenu-trigger">
-                                            <a style="font-size: 24px;">About Us <i
-                                                    class="fa-solid fa-angle-down"></i></a>
-                                            <ul class="tt-ol-submenu">
-                                                <li><a href="/about/team.html">Our Story</a></li>
-                                                <li><a href="/about/history.html">Mission & Vision </a></li>
-                                            </ul>
+                                            <a style="font-size: 24px;">About Us </a>
                                         </div>
                                     </li>
 
