--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
                                     <li class="tt-ol-submenu-wrap">
                                         <div class="tt-ol-submenu-trigger">
-                                            <a style="font-size: 24px;">About Us </a>
+                                            <a style="font-size: 24px;" href="/about.html">About Us </a>
                                         </div>
                                     </li>
 
