--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@
                             <div class="tt-ol-menu-content">
                                 <!-- Begin menu list -->
                                 <ul class="tt-ol-menu-list">
-                                    <li class="tt-ol-submenu-wrap active">
-                                        <div class="tt-ol-submenu-trigger ">
-                                            <a style="font-size: 24px;" href="/index.html">Home</a>
+                                     <li class="tt-ol-submenu-wrap">
+                                        <div class="tt-ol-submenu-trigger">
+                                            <a style="font-size: 24px;" href="/index.html">Home </a>
                                         </div>
                                     </li>
 
