--- a/about.html
+++ b/about.html
@@ -128,12 +128,12 @@
 
   <!-- Hero Section -->
   <div class="about-section">
-    <h1>About Us</h1>
+    <h1 style="color: #fff;">About Us</h1>
   </div>
 
   <!-- Slant Shape -->
   <div class="slant">
-    <a href="#">Home</a>
+    <a href="/index.html">Home</a>
     <span>&raquo;</span>
     <span>About Us</span>
 
