--- a/about.html
+++ b/about.html
@@ -45,7 +45,6 @@
 
 
   <style>
-
     .footer-widget__links li {
       display: flex;
       /* Align icon and text in a line */
@@ -60,7 +59,7 @@
     .footer-widget__links li a {
       text-decoration: none;
       color: #fff;
-      /* Or your footer text color */ 
+      /* Or your footer text color */
       font-size: 16px;
       display: flex;
       align-items: left;
@@ -77,53 +76,53 @@
 
 <body>
 
-    <nav class="navbar-container">
-      <a href="#" class="navbar-logo">
-        <!-- Placeholder for ALAKNANDA logo graphic -->
-        <img src="/images/Alaknanda Transport logo final.png" alt="ALAKNANDA Logo Graphic">
-      </a>
+  <nav class="navbar-container">
+    <a href="#" class="navbar-logo">
+      <!-- Placeholder for ALAKNANDA logo graphic -->
+      <img src="/images/Alaknanda Transport logo final.png" alt="ALAKNANDA Logo Graphic">
+    </a>
 
-      <div class="hamburger-menu-icon" id="hamburgerIcon">
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
-    </nav>
-
-    <!-- Full-screen Overlay Navigation Menu -->
-    <div class="overlay-menu" id="overlayMenu">
-      <ul class="overlay-menu-content" id="overlayMenuContent">
-        <li><span>01</span><a href="/index.html">HOME</a></li>
-        <li><span>02</span><a href="/about.html">ABOUT US</a></li>
-        <li class="has-submenu" id="servicesMenuItem">
-          <span>03</span><a href="#">SERVICES</a>
-          <ul>
-            <li><a href="/about/team.html">Molasses bulk Transport</a></li>
-            <li><a href="/about/history.html">Pan-India Operations</a></li>
-            <li><a href="/about/history.html">Safe and Secure</a></li>
-            <li><a href="/about/history.html">GPS tracking system</a></li>
-          </ul>
-        </li>
-        <li class="has-submenu" id="fleetMenuItem">
-          <span>04</span><a href="#">FLEET</a>
-          <ul>
-            <li><a href="/about/team.html">Types of Vehicles</a></li>
-            <li><a href="/about/history.html">Maintenance & Cleanliness Protocol</a></li>
-          </ul>
-        </li>
-        <li class="has-submenu" id="industriesMenuItem">
-          <span>05</span><a href="#">INDUSTRIES SERVED</a>
-          <ul>
-            <li><a href="/about/team.html">Sugar Factories</a></li>
-            <li><a href="/about/history.html">Distilleries</a></li>
-            <li><a href="/about/history.html">Biofuel & Chemical Units</a></li>
-          </ul>
-        </li>
-        <li><span>06</span><a href="/gallery.html">GALLERY</a></li>
-        <li><span>07</span><a href="#">TESTIMONIALS</a></li>
-        <li><span>08</span><a href="#">CONTACT US</a></li>
-      </ul>
+    <div class="hamburger-menu-icon" id="hamburgerIcon">
+      <span></span>
+      <span></span>
+      <span></span>
     </div>
+  </nav>
+
+  <!-- Full-screen Overlay Navigation Menu -->
+  <div class="overlay-menu" id="overlayMenu">
+    <ul class="overlay-menu-content" id="overlayMenuContent">
+      <li><span>01</span><a href="/index.html">HOME</a></li>
+      <li><span>02</span><a href="/about.html">ABOUT US</a></li>
+      <li class="has-submenu" id="servicesMenuItem">
+        <span>03</span><a href="#">SERVICES</a>
+        <ul>
+          <li><a href="/about/team.html">Molasses bulk Transport</a></li>
+          <li><a href="/about/history.html">Pan-India Operations</a></li>
+          <li><a href="/about/history.html">Safe and Secure</a></li>
+          <li><a href="/about/history.html">GPS tracking system</a></li>
+        </ul>
+      </li>
+      <li class="has-submenu" id="fleetMenuItem">
+        <span>04</span><a href="#">FLEET</a>
+        <ul>
+          <li><a href="/about/team.html">Types of Vehicles</a></li>
+          <li><a href="/about/history.html">Maintenance & Cleanliness Protocol</a></li>
+        </ul>
+      </li>
+      <li class="has-submenu" id="industriesMenuItem">
+        <span>05</span><a href="#">INDUSTRIES SERVED</a>
+        <ul>
+          <li><a href="/about/team.html">Sugar Factories</a></li>
+          <li><a href="/about/history.html">Distilleries</a></li>
+          <li><a href="/about/history.html">Biofuel & Chemical Units</a></li>
+        </ul>
+      </li>
+      <li><span>06</span><a href="/gallery.html">GALLERY</a></li>
+      <li><span>07</span><a href="#">TESTIMONIALS</a></li>
+      <li><span>08</span><a href="#">CONTACT US</a></li>
+    </ul>
+  </div>
   <!----------- Start Footer Sections ---------------->
 
   <!-- Hero Section -->
@@ -140,32 +139,39 @@
   </div>
 
 
-  <!----------- Start Why Choose Alaknanda Sections ---------------->
-  <section class="why-choose-alaknada">
-    <div class="why-choose-container">
-
+  <!----------- Start About Alaknanda Sections ---------------->
+  <section class="about-alaknada">
+    <div class="about-container">
       <!-- Image Column -->
-      <div class="why-choose-image-column">
-        <div class="why-choose-image-bg-red-container"></div>
+      <div class="about-image-column">
+        <div class="about-image-bg-red-container"></div>
         <img src="https://cdn.pixabay.com/photo/2018/03/09/06/21/transport-3210728_1280.jpg"
           alt="Construction Engineer">
       </div>
 
       <!-- Content Column -->
-      <div class="why-choose-content-column">
-        <div class="why-choose-section-title2">
-          <h2>Why Choose Alaknanda <span style="color:#ff5722 ;">Transport?</span></h2>
-          <!-- <p>What sets BuildBes apart is our unwavering dedication to quality, innovation, and customer service. With a team of skilled professionals.</p> -->
+      <div class="about-content-column">
+        <div class="about-section-title2">
+          <h1>About <span style="color:#ff5722 ;">Us</span></h1>
+          <h2 style="font-size: 2rem;">Driving India's Growth – One Load at a Time</h2>
+          <p>Alaknanda Transport Company is a trusted leader in the transportation of molasses and liquid bulk cargo
+            across India. With a strong legacy built on integrity, safety, and efficiency, we have been at the forefront
+            of India's agricultural and industrial supply chain, ensuring timely and secure delivery of essential
+            by-products like molasses to distilleries, sugar mills, and allied industries</p>
+          <p>Established with the vision of creating a streamlined and dependable logistics network, Alaknanda Transport
+            is proud to be a specialist transporter, catering to niche requirements that demand precision, compliance,
+            and care. Our fleet of custom-designed tankers is maintained to the highest standards and operated by
+            trained professionals who understand the value of time-sensitive and quality-assured transport.</p>
         </div>
 
-        <div class="why-choose-features-list">
-
+        <div class="about-features-list">
+          <h4 style="font-size: 2rem;">Why Choose Alaknanda Transport?</h4>
           <!-- Feature Item 1 -->
-          <div class="why-choose-feature-item">
-            <div class="why-choose-feature-icon-wrapper2">
+          <div class="about-feature-item">
+            <div class="about-feature-icon-wrapper2">
               <i class="fa-solid fa-earth-americas"></i>
             </div>
-            <div class="why-choose-feature-text">
+            <div class="about-feature-text">
               <h3>Nationwide Coverage:</h3>
               <p>We operate across India, ensuring molasses transport from production zones to remote
                 destinations.</p>
@@ -173,11 +179,11 @@
           </div>
 
           <!-- Feature Item 2 -->
-          <div class="why-choose-feature-item">
-            <div class="why-choose-feature-icon-wrapper2">
+          <div class="about-feature-item">
+            <div class="about-feature-icon-wrapper2">
               <i class="fas fa-lightbulb"></i>
             </div>
-            <div class="why-choose-feature-text">
+            <div class="about-feature-text">
               <h3>Specialized Fleet:</h3>
               <p>Our modern, hygienic, and certified tankers are designed specifically for liquid cargo
                 like molasses.</p>
@@ -185,11 +191,11 @@
           </div>
 
           <!-- Feature Item 3 -->
-          <div class="why-choose-feature-item">
-            <div class="why-choose-feature-icon-wrapper2">
+          <div class="about-feature-item">
+            <div class="about-feature-icon-wrapper2">
               <i class="fa-solid fa-user-shield"></i>
             </div>
-            <div class="why-choose-feature-text">
+            <div class="about-feature-text">
               <h3>Safety & Compliance First:</h3>
               <p>We strictly follow industry safety protocols and environmental regulations to prevent
                 spillage and contamination.</p>
@@ -197,11 +203,11 @@
           </div>
 
           <!-- Feature Item 4 -->
-          <div class="why-choose-feature-item">
-            <div class="why-choose-feature-icon-wrapper2">
+          <div class="about-feature-item">
+            <div class="about-feature-icon-wrapper2">
               <i class="fa-solid fa-people-group"></i>
             </div>
-            <div class="why-choose-feature-text">
+            <div class="about-feature-text">
               <h3>Experienced Team:</h3>
               <p>With years of domain expertise, our drivers, logistics managers, and support staff
                 deliver consistent excellence.</p>
@@ -209,11 +215,11 @@
           </div>
 
           <!-- Feature Item 5 -->
-          <div class="why-choose-feature-item">
-            <div class="why-choose-feature-icon-wrapper2">
+          <div class="about-feature-item">
+            <div class="about-feature-icon-wrapper2">
               <i class="fa-solid fa-truck-ramp-box"></i>
             </div>
-            <div class="why-choose-feature-text">
+            <div class="about-feature-text">
               <h3>On-Time Delivery:</h3>
               <p>We understand your time is valuable—our optimized routes and GPS-enabled vehicles ensure
                 punctuality every time.</p>
@@ -221,26 +227,25 @@
           </div>
 
           <!-- Summary Text -->
-          <div class="why-choose-feature-text">
-            <p style="margin-bottom: 0; font-size: 1rem; line-height: 1.4;">
+          <div class="about-feature-text">
+            <p style="margin-bottom: 0; font-size: 0.9rem; line-height: 1.4;">
               At Alaknanda Transport Company, we don’t just move cargo—we build long-term partnerships
               based on trust, service quality, and transparency. Whether it’s one load or a long-term
               logistics contract, we are committed to being your dependable transport ally.
             </p>
-            <h5 style="margin-bottom: 0; font-size: 1.5rem; color: black; margin-top: 10px; font-size: 900;">Let’s move
+            <h5 style="margin-bottom: 0; font-size: 1.2rem; color: black; margin-top: 10px; font-size: 900;">Let’s move
               forward—together.</h5>
           </div>
         </div>
       </div>
     </div>
-
   </section>
-  <!----------- End Why Choose Alaknanda Sections ---------------->
+  <!------------------ End About Alaknanda Section --------------->
 
 
+<!----------- Start Our Mission and Vission Sections ---------------->
 
   <section class="mission-vission-section">
-
     <div class="mission-main-container">
       <!-- Left Content Column -->
       <div class="mission-content-column">
@@ -263,10 +268,9 @@
     </div>
 
   </section>
-  <!----------- End Why Choose Alaknanda Sections ---------------->
+  <!----------- End Our Mission and VissionSections ---------------->
 
-
-
+  <!----------- Start Our Fleet Sections ---------------->
   <section class="fleet-section">
     <div class="our-fleet-container">
       <div class="our-fleet-section-header">
@@ -317,6 +321,8 @@
       </div>
     </div>
   </section>
+
+  <!------------------- End Our Fleet Section ------------------->
 
 
 
